{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 440,
  "lineage": "91f1bf30-2b0a-2dd4-1ea6-fb94bdbffec4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:503561449641:internet-gateway/igw-02f4fd5b5be14b6f6",
            "id": "igw-02f4fd5b5be14b6f6",
            "owner_id": "503561449641",
            "tags": {
              "Name": "api-8000-public-01-igw"
            },
            "tags_all": {
              "Name": "api-8000-public-01-igw"
            },
            "vpc_id": "vpc-07098cf89032d89ee"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:503561449641:loadbalancer/app/api-8000-public-01-alb/95fa90d5692e4934",
            "arn_suffix": "app/api-8000-public-01-alb/95fa90d5692e4934",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "api-8000-public-01-alb-954436251.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:503561449641:loadbalancer/app/api-8000-public-01-alb/95fa90d5692e4934",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "api-8000-public-01-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03f29c40599227156"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0d9d1b1a31ccf40e3"
              },
              {
                "subnet_id": "subnet-0dc686b00aba960bd"
              }
            ],
            "subnets": [
              "subnet-0d9d1b1a31ccf40e3",
              "subnet-0dc686b00aba960bd"
            ],
            "tags": {
              "Name": "api-8000-public-01-alb"
            },
            "tags_all": {
              "Name": "api-8000-public-01-alb"
            },
            "timeouts": {
              "create": "20m",
              "delete": "20m",
              "update": "20m"
            },
            "vpc_id": "vpc-07098cf89032d89ee",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:503561449641:listener/app/api-8000-public-01-alb/95fa90d5692e4934/3ff4fb44f0dc73d9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:503561449641:targetgroup/api-8000-public-01-frontend-tg/ed8ae4dc1d843a89",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:503561449641:listener/app/api-8000-public-01-alb/95fa90d5692e4934/3ff4fb44f0dc73d9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:503561449641:loadbalancer/app/api-8000-public-01-alb/95fa90d5692e4934",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app_alb",
            "aws_lb_target_group.frontend_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "backend_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:503561449641:targetgroup/api-8000-public-01-backend-tg/f9d5ed4d08b0b01d",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:503561449641:listener-rule/app/api-8000-public-01-alb/95fa90d5692e4934/3ff4fb44f0dc73d9/53625e3c9783d989",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:503561449641:listener-rule/app/api-8000-public-01-alb/95fa90d5692e4934/3ff4fb44f0dc73d9/53625e3c9783d989",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:503561449641:listener/app/api-8000-public-01-alb/95fa90d5692e4934/3ff4fb44f0dc73d9",
            "priority": 10,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app_alb",
            "aws_lb_listener.http_listener",
            "aws_lb_target_group.backend_tg",
            "aws_lb_target_group.frontend_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:503561449641:targetgroup/api-8000-public-01-backend-tg/f9d5ed4d08b0b01d",
            "arn_suffix": "targetgroup/api-8000-public-01-backend-tg/f9d5ed4d08b0b01d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:503561449641:targetgroup/api-8000-public-01-backend-tg/f9d5ed4d08b0b01d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "api-8000-public-01-backend-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "api-8000-public-01-backend-tg"
            },
            "tags_all": {
              "Name": "api-8000-public-01-backend-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07098cf89032d89ee"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:503561449641:targetgroup/api-8000-public-01-frontend-tg/ed8ae4dc1d843a89",
            "arn_suffix": "targetgroup/api-8000-public-01-frontend-tg/ed8ae4dc1d843a89",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:503561449641:targetgroup/api-8000-public-01-frontend-tg/ed8ae4dc1d843a89",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "api-8000-public-01-frontend-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "api-8000-public-01-frontend-tg"
            },
            "tags_all": {
              "Name": "api-8000-public-01-frontend-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07098cf89032d89ee"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:503561449641:route-table/rtb-046f1627769c8e3b0",
            "id": "rtb-046f1627769c8e3b0",
            "owner_id": "503561449641",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02f4fd5b5be14b6f6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "api-8000-public-01-public-rt"
            },
            "tags_all": {
              "Name": "api-8000-public-01-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07098cf89032d89ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0759079e926a0a588",
            "route_table_id": "rtb-046f1627769c8e3b0",
            "subnet_id": "subnet-0dc686b00aba960bd"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0566ff7b556cd63df",
            "route_table_id": "rtb-046f1627769c8e3b0",
            "subnet_id": "subnet-0d9d1b1a31ccf40e3"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:503561449641:security-group/sg-03f29c40599227156",
            "description": "Allow inbound traffic on HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f29c40599227156",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "api-8000-public-01-alb-sg",
            "name_prefix": "",
            "owner_id": "503561449641",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "api-8000-public-01-alb-sg"
            },
            "tags_all": {
              "Name": "api-8000-public-01-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07098cf89032d89ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:503561449641:security-group/sg-0c9a8d65b3df532b7",
            "description": "Allow inbound traffic from ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c9a8d65b3df532b7",
            "ingress": [],
            "name": "api-8000-public-01-ecs-sg",
            "name_prefix": "",
            "owner_id": "503561449641",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "api-8000-public-01-ecs-sg"
            },
            "tags_all": {
              "Name": "api-8000-public-01-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07098cf89032d89ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_alb_to_ecs_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow traffic from ALB to ECS container(backend)",
            "from_port": 8000,
            "id": "sgrule-2227641733",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c9a8d65b3df532b7",
            "security_group_rule_id": "sgr-0ffd9b3b3adc828a8",
            "self": false,
            "source_security_group_id": "sg-03f29c40599227156",
            "timeouts": null,
            "to_port": 8000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_alb_to_ecs_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow traffic from ALB to ECS container(frontend)",
            "from_port": 3000,
            "id": "sgrule-3134184194",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c9a8d65b3df532b7",
            "security_group_rule_id": "sgr-05eee2a34fd196793",
            "self": false,
            "source_security_group_id": "sg-03f29c40599227156",
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:503561449641:subnet/subnet-0dc686b00aba960bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc686b00aba960bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "503561449641",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "api-8000-public-01-public-subnet-a"
            },
            "tags_all": {
              "Name": "api-8000-public-01-public-subnet-a"
            },
            "vpc_id": "vpc-07098cf89032d89ee"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:503561449641:subnet/subnet-0d9d1b1a31ccf40e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9d1b1a31ccf40e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "503561449641",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "api-8000-public-01-public-subnet-c"
            },
            "tags_all": {
              "Name": "api-8000-public-01-public-subnet-c"
            },
            "vpc_id": "vpc-07098cf89032d89ee"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:503561449641:vpc/vpc-07098cf89032d89ee",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04c8baaccfb62b3b4",
            "default_route_table_id": "rtb-07e3aafe667c9ad84",
            "default_security_group_id": "sg-0d3b03b586b8f7ed4",
            "dhcp_options_id": "dopt-02646fbf1e44d1bd7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07098cf89032d89ee",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07e3aafe667c9ad84",
            "owner_id": "503561449641",
            "tags": {
              "Name": "api-8000-public-01-vpc"
            },
            "tags_all": {
              "Name": "api-8000-public-01-vpc"
            }
          }
        }
      ]
    }
  ]
}